tests/hevm/pass/cast-6/cast-6.act
contract A

contract C

constructor
interface constructor(uint z1)

iff
    CALLVALUE == 0

creates
    uint z := z1

constructor
interface constructor(uint x1)

iff
    CALLVALUE == 0

creates
    uint x := x1
    C c := create C(42)


transition c
interface c()

iff
    CALLVALUE == 0

returns (pre(c))


contract B

constructor
interface constructor(address<A> x)

iff
    CALLVALUE == 0

creates
    A a := x
    C c := x.c
