tests/hevm/fail/aliasing-2/aliasing-2.act
contract C

constructor(uint z1)

iff
    CALLVALUE == 0

creates
    uint z := z1

contract A

constructor(uint x1)

iff
    CALLVALUE == 0

creates
    uint x := x1
    C c := new C(42)


transition c() : C

iff
    CALLVALUE == 0

returns (pre(c))

contract B

constructor(address<A> x)

iff
    CALLVALUE == 0

creates
    A a := x
    C c := x.c
